--- a/app.css
+++ b/app.css
@@ -89,13 +89,14 @@ nav{
     margin: 0 auto;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    gap: 20px;
+    gap: 50px;
     height: 90px;
     padding: 1.0rem;
+    position: absolute;
+    top: 0;
+    left: 5%;
+    right: 5%;
+    z-index: 99;
 }
 .sh{
     font-family: "Playwrite IT Moderna", serif;
@@ -104,8 +105,13 @@ nav{
   font-style: normal;
 }
 .dragon{
+    margin-right: auto;
     width: 450px;
     height: 250px;
+    background-image: transparent;
+    
+  
+    
 }
 nav .contact{
     display: flex;
@@ -143,7 +149,7 @@ p, a{
     font-style: normal;
 }
 h1{
-    font-size: var(--text-h1);
+    font-size: font-size: clamp(4em, 5vw, 6em);
 }
 /* --------HERO SECTION--------- */
 .hero-section{
@@ -223,6 +229,10 @@ h1{
 
 }
 .btn-primary{
+
+    display: flex;
+    width: 200px;
+    justify-content: center;
     background-color: var(--pallete-24);
     border: none;
     box-shadow: 0 2px 0 rgb(0, 0, 0, 25);
@@ -234,8 +244,65 @@ h1{
     z-index: -1;
 }
 .why-us img{
-    height: 800px;
+    height: auto;
     width: 100%;
+}
+
+.apply{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5.0rem;
+    
+    border-radius: 50%;
+    position: relative;
+    left: 20%;
+    top: -20%;
+}
+.apply, #inner{
+    position: absolute;
+    width: 250px;
+    height: 200px;
+    
+    background-color: #ccb2b2;
+    color: var(--black);
+    opacity: .8;
+    font-size: 1.4rem;
+    font-weight: var(--font-weight-bold);
+
+    
+}
+.representative{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    flex-direction: column;
+    border-radius: 0 20px 20px 0;
+    width: 90%;
+    height: 300px;
+    background-color: #f0efef;
+    color: var(--black);
+    opacity: 0.5;
+    padding: 1.5rem;
+    font-weight: var(--font-weight-bold);
+    top: 55%;
+    gap: 20px;
+    margin-bottom: 200px;
+}
+#innertext{
+    font-family: "Poppins", serif;
+    top: 0;
+    font-size: clamp(1em, 2vw, 3em);
+}
+.trust{
+    position: relative;
+    height: 300px;
+    background-color: #023336;
+    display: flex;
+
+    top: 250px;
+
 }
 
 @media (max-width:1200px) {
@@ -244,6 +311,8 @@ h1{
         display: none;
         flex-direction: column;
         position: fixed;
+        justify-content: flex-start;
+        align-items: center;
         top: 0;
         bottom: 0;
         right: -100%;
@@ -273,30 +342,36 @@ h1{
     }
     button{
         font-size: 24px;
-        padding: 1.0rem 3.5rem;
+        padding: 1.0rem 1.5rem;
         border-bottom: 2px solid black;
         
         
         
     }
     .btn-primary{
-        width: 90%;
+        display: flex;
+        width: 200px;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--pallete-24);
         border: none;
-        border-bottom: 2px solid black;
-        margin: 0 auto;
-
+        box-shadow: 0 2px 0 rgb(0, 0, 0, 25);
     }
     .btn-secondary{
-        width: 90%;
-        margin: 0 auto;
+        display: flex;
+        width: 200px;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--pallete-4);
         border: none;
-        border-bottom: 2px solid black;
-
+        box-shadow: 0 2px 0 rgb(0, 0, 0, 25);
     }
     .dragon{
+        margin-right: auto;
         height: 150px;
         width: 150px;
         background-color: transparent;
+        
     }
 }
 @media (max-width:500px){
@@ -311,7 +386,8 @@ h1{
         font-weight: var(--font-weight-bold);
         left: 0;
         top: 0;
-        width: 550px;
+        right: 0;
+        width: 90%;
         
          
      }
@@ -319,7 +395,7 @@ h1{
             
             right: 0;
             top: 0;
-            display: none;
+            display: flex;
             bottom: 0;
             
             justify-content: flex-end;
@@ -329,7 +405,86 @@ h1{
             z-index: -1;
         
         }
-     }
+        .btn-primary{
+            display: flex;
+            flex-grow: 0;
+            width: 200px;;
+            border: none;
+            border-bottom: 2px solid black;
+            margin: 0 auto;
+            padding: 1.0rem 1.5rem;
+            justify-content: center;
+            transition: 3s ease;
+    
+        }
+        .btn-secondary{
+            display: flex;
+            flex-grow: 0;
+            width: 200px;;
+            border: none;
+            border-bottom: 2px solid black;
+            margin: 0 auto;
+            padding: 1.0rem 1.5rem;
+            justify-content: center;
+            transition: 3s ease;
+        }
+        .apply{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 5.0rem;
+            
+            border-radius: 50%;
+            position: relative;
+            left: 20%;
+            top: -30%;
+        }
+        .apply, #inner{
+            position: absolute;
+            width: 250px;
+            height: 200px;
+            
+            background-color: #ccb2b2;
+            color: var(--black);
+            opacity: .8;
+            font-size: 1.4rem;
+            font-weight: var(--font-weight-bold);
+        
+            
+        }
+        .representative{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            flex-direction: column;
+            border-radius: 0 20px 20px 0;
+            width: 90%;
+            height: 300px;
+            background-color: #f0efef;
+            color: var(--black);
+            opacity: 0.5;
+            padding: 1.5rem;
+            font-weight: var(--font-weight-bold);
+            top: 55%;
+            gap: 20px;
+            margin-bottom: 200px;
+        }
+        #innertext{
+            font-family: "Poppins", serif;
+            top: 0;
+            font-size: clamp(1em, 2vw, 3em);
+        }
+        .trust{
+            position: relative;
+            height: 300px;
+            background-color: #023336;
+            display: flex;
+            
+            top: 250px;
+        
+        }
+        
 }
 
  
