--- a/app.css
+++ b/app.css
@@ -79,6 +79,7 @@ body{
     width: 90%;
     margin: 0 auto;
     flex-direction: column;
+    justify-content: center;
    
     
 }
@@ -109,6 +110,7 @@ nav{
     width: 450px;
     height: 250px;
     background-image: transparent;
+    padding: 3.0rem;
     
   
     
@@ -149,7 +151,7 @@ p, a{
     font-style: normal;
 }
 h1{
-    font-size: font-size: clamp(4em, 5vw, 6em);
+    font-size: clamp(4em, 5vw, 6em);
 }
 /* --------HERO SECTION--------- */
 .hero-section{
@@ -256,18 +258,20 @@ h1{
     
     border-radius: 50%;
     position: relative;
-    left: 20%;
-    top: -20%;
+    
+    top: -70%;
+    right: 0;
 }
 .apply, #inner{
     position: absolute;
-    width: 250px;
-    height: 200px;
+    width: 450px;
+    height: 300px;
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 25);
     
-    background-color: #ccb2b2;
+    background-color: #EFF1F5;
     color: var(--black);
     opacity: .8;
-    font-size: 1.4rem;
+    font-size: 2.4rem;
     font-weight: var(--font-weight-bold);
 
     
@@ -280,29 +284,93 @@ h1{
     flex-direction: column;
     border-radius: 0 20px 20px 0;
     width: 90%;
-    height: 300px;
-    background-color: #f0efef;
+    height: 500px;
+    background-color: rgba(199, 194, 194, 0.7);
     color: var(--black);
-    opacity: 0.5;
-    padding: 1.5rem;
+    opacity: 0.8;
+    padding: 2.5rem;
     font-weight: var(--font-weight-bold);
-    top: 55%;
+    top: -20%;
     gap: 20px;
     margin-bottom: 200px;
+    box-shadow: 5px 5px 12px rgba(0, 0, 0, 25);
+    color: #586276;
 }
 #innertext{
     font-family: "Poppins", serif;
     top: 0;
     font-size: clamp(1em, 2vw, 3em);
+    
 }
 .trust{
     position: relative;
     height: 300px;
-    background-color: #023336;
+    /* background-color: #023336; */
     display: flex;
 
-    top: 250px;
+    top: 350px;
 
+}
+.trust-issue{
+    display: flex;
+    flex-direction: column;
+    background-color: #023336;
+    gap: 20px;
+    height: 200px;
+    margin-bottom: 250px;
+}
+.trust-issue, a{
+  text-decoration: none;
+  color: var(--white);
+  height: 200px;
+}
+.apply-head{
+    background-color: #000;
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 200px;
+    height: 500px;
+    border-radius: 0 50% 0 0;
+    color: var(--pallete-14);
+    font-size: clamp(1.5rem,2vw ,2.5rem);
+    background-color: #cbd7d8;
+   
+}
+#fee{
+    font-size: clamp(1.4rem,3vw ,2.5rem);
+    background-color: var(--pallete-2) ;
+    margin-top: 50px;
+    font-weight: var(--font-weight-bold);
+    color: var(--pallete-18);
+    padding: 2.0rem;
+}
+.fill-up{
+    background-color: #19384A;
+    width: 90%;
+    margin: 0 auto;
+    height: 800px;
+    color: var(--white);
+    
+}
+.fill-up, ul{
+    list-style: none;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    
+}
+.loan ul{
+    position: absolute;
+    top: 5%;
+    left: 10%;
 }
 
 @media (max-width:1200px) {
@@ -367,17 +435,201 @@ h1{
         box-shadow: 0 2px 0 rgb(0, 0, 0, 25);
     }
     .dragon{
+        
         margin-right: auto;
-        height: 150px;
-        width: 150px;
+        height: 350px;
+        width: 350px;
         background-color: transparent;
         
     }
+    .apply{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 5.0rem;
+        
+        border-radius: 50%;
+        position: relative;
+        left: 20%;
+        top: -20%;
+    }
+    .apply, #inner{
+        position: absolute;
+        width: 350px;
+        height: 300px;
+        
+        background-color: #EFF1F5;
+        color: var(--black);
+        opacity: .8;
+        font-size: 1.4rem;
+        font-weight: var(--font-weight-bold);
+    
+        
+    }
+    .representative{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        flex-direction: column;
+        border-radius: 0 20px 20px 0;
+        width: 90%;
+        height: 400px;
+        background-color: #b3a7a7;
+        color: var(--black);
+        opacity: 0.5;
+        padding: 1.5rem;
+        font-weight: var(--font-weight-bold);
+        top: 66%;
+        gap: 20px;
+        margin-bottom: 200px;
+    }
+    #innertext{
+        font-family: "Poppins", serif;
+        top: 0;
+        font-size: clamp(1em, 2vw, 3em);
+    }
+    .trust{
+        position: relative;
+        height: 300px;
+        
+        display: flex;
+        
+        top: 250px;
+    
+    }
+}
+
+@media (max-width:700px) {
+    .contact{
+       padding: 1.0rem;
+       display: none;
+       flex-direction: column;
+       position: fixed;
+       justify-content: flex-start;
+       align-items: center;
+       top: 0;
+       bottom: 0;
+       right: -100%;
+       box-sizing: border-box;
+       width: 300px;
+       background-color: var(--white);
+       box-shadow: 0 12px 15px rgba(0, 0, 0, 25);
+       z-index: 99;
+       transition: .75s ease-in-out;
+   }
+   .contact a,p{
+       width: 100%;
+       display: flex;
+       text-decoration: none;
+       color: #000;
+       align-items: center;
+       justify-content: center;
+   }
+   
+   .open{
+       display: none;
+   }
+    
+   .open,.close{
+       display: flex;
+       cursor: pointer;
+   }
+   button{
+       font-size: 24px;
+       padding: 1.0rem 1.5rem;
+       border-bottom: 2px solid black;
+       
+       
+       
+   }
+   .btn-primary{
+       display: flex;
+       width: 200px;
+       justify-content: center;
+       align-items: center;
+       background-color: var(--pallete-24);
+       border: none;
+       box-shadow: 0 2px 0 rgb(0, 0, 0, 25);
+   }
+   .btn-secondary{
+       display: flex;
+       width: 200px;
+       justify-content: center;
+       align-items: center;
+       background-color: var(--pallete-4);
+       border: none;
+       box-shadow: 0 2px 0 rgb(0, 0, 0, 25);
+   }
+   .dragon{
+       margin-right: auto;
+       height: 250px;
+       width: 250px;
+       background-color: transparent;
+       
+   }
+   .apply{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       padding: 5.0rem;
+       
+       border-radius: 50%;
+       position: relative;
+       left: 20%;
+       top: -20%;
+   }
+   .apply, #inner{
+       position: absolute;
+       width: 250px;
+       height: 200px;
+       
+       background-color: #EFF1F5;
+       color: var(--black);
+       opacity: .8;
+       font-size: 1.4rem;
+       font-weight: var(--font-weight-bold);
+   
+       
+   }
+   .representative{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       position: absolute;
+       flex-direction: column;
+       border-radius: 0 20px 20px 0;
+       width: 90%;
+       height: 250px;
+       background-color: #f0efef;
+       color: var(--black);
+       opacity: 0.5;
+       padding: 1.5rem;
+       font-weight: var(--font-weight-bold);
+       top: 60%;
+       gap: 20px;
+       margin-bottom: 200px;
+   }
+   #innertext{
+       font-family: "Poppins", serif;
+       top: 0;
+       font-size: clamp(1em, 2vw, 3em);
+   }
+   .trust{
+       position: relative;
+       height: 300px;
+     
+       display: flex;
+       
+       top: 250px;
+   
+   }
 }
 @media (max-width:500px){
     .dragon{
-        height: 150px;
-        width: 150px;
+        height: 200px;
+        width: 200px;
+        padding: 1.0rem;
         background-color: transparent;
     }
     .hero-section h1{
@@ -397,11 +649,12 @@ h1{
             top: 0;
             display: flex;
             bottom: 0;
-            
+            border-radius: 50%;
             justify-content: flex-end;
             opacity: 0.8;
             object-fit: cover;
-            height: 150px;
+            
+            width: 100%;
             z-index: -1;
         
         }
@@ -426,7 +679,7 @@ h1{
             margin: 0 auto;
             padding: 1.0rem 1.5rem;
             justify-content: center;
-            transition: 3s ease;
+            align-items: center;            
         }
         .apply{
             display: flex;
@@ -437,7 +690,121 @@ h1{
             border-radius: 50%;
             position: relative;
             left: 20%;
-            top: -30%;
+            top: -40%;
+        }
+        .apply, #inner{
+            position: absolute;
+            width: 250px;
+            height: 200px;
+            
+            background-color: #EFF1F5;
+            color: var(--black);
+            opacity: .8;
+            font-size: 1.4rem;
+            font-weight: var(--font-weight-bold);
+        
+            
+        }
+        .representative{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            flex-direction: column;
+            border-radius: 0 20px 20px 0;
+            width: 90%;
+            height: 200px;
+            background-color: #f0efef;
+            color: var(--black);
+            opacity: 0.5;
+            padding: 1.5rem;
+            font-weight: var(--font-weight-bold);
+            top: 55%;
+            gap: 20px;
+            margin-bottom: 200px;
+        }
+        #innertext{
+            font-family: "Poppins", serif;
+            top: 0;
+            font-size: clamp(1em, 2vw, 3em);
+        }
+        .trust{
+            position: relative;
+            height: 300px;
+            
+            display: flex;
+            
+            top: 250px;
+        
+        }
+        
+}
+@media (max-width:400px){
+    .dragon{
+        height: 200px;
+        width: 200px;
+        padding: 1.0rem;
+        background-color: transparent;
+    }
+    .hero-section h1{
+        position: absolute;
+        font-size: clamp(4em, 5vw, 6em);
+        font-weight: var(--font-weight-bold);
+        left: 0;
+        top: 0;
+        right: 0;
+        width: 90%;
+        
+         
+     }
+     .hero-img{
+            
+            right: 0;
+            top: 0;
+            display: flex;
+            bottom: 0;
+            border-radius: 50%;
+            justify-content: flex-end;
+            opacity: 0.8;
+            object-fit: cover;
+            
+            width: 100%;
+            z-index: -1;
+        
+        }
+        .btn-primary{
+            display: flex;
+            flex-grow: 0;
+            width: 200px;;
+            border: none;
+            border-bottom: 2px solid black;
+            margin: 0 auto;
+            padding: 1.0rem 1.5rem;
+            justify-content: center;
+            transition: 3s ease;
+    
+        }
+        .btn-secondary{
+            display: flex;
+            flex-grow: 0;
+            width: 200px;;
+            border: none;
+            border-bottom: 2px solid black;
+            margin: 0 auto;
+            padding: 1.0rem 1.5rem;
+            justify-content: center;
+            align-items: center;            
+        }
+        .apply{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 5.0rem;
+            
+            border-radius: 50%;
+            position: relative;
+            left: 20%;
+            top: -50%;
         }
         .apply, #inner{
             position: absolute;
@@ -460,7 +827,7 @@ h1{
             flex-direction: column;
             border-radius: 0 20px 20px 0;
             width: 90%;
-            height: 300px;
+            height: 400px;
             background-color: #f0efef;
             color: var(--black);
             opacity: 0.5;
@@ -478,7 +845,7 @@ h1{
         .trust{
             position: relative;
             height: 300px;
-            background-color: #023336;
+            
             display: flex;
             
             top: 250px;
@@ -486,6 +853,8 @@ h1{
         }
         
 }
+
+ 
 
  
    
